feat: fuel loading